@@ -9,8 +9,7 @@ Modify the Contacts app from the preceding exercises to include an image for eac
 <h4>JavaFX SDK 11.0.2 -  https://openjfx.io/ <br>
 Scene Builder 11.0.0 - https://gluonhq.com/products/scene-builder/ <br>
 IntelliJ IDEA - https://www.jetbrains.com/idea/ <br>
-Instruction to set up - https://openjfx.io/openjfx/docs/#introduction <br> 
-For VM options: --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml ;${PATH_TO_JAVAFX} - path to JavaFX library </h4>
+
 
 <h3> App Screenshots </h3>
 
